--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,15 @@
   <link href="/assets/css/main.css" rel="stylesheet">
 
   <script>
+    (function () {
+      var stored = localStorage.getItem("theme");
+      var prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
+      var useDark = stored ? stored === "dark" : prefersDark;
+      document.documentElement.classList.toggle("dark", useDark);
+    })();
+  </script>
+
+  <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
