--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,14 +5,14 @@ active: blog
 
 <a href="/blog/" class="nav-link text-sm">← Back to all posts</a>
 <div class="space-y-2 my-8">
-  <h1 class="text-xl font-extrabold text-gray-500">
+  <h1 class="text-xl font-extrabold text-gray-500 dark:text-gray-300">
     {{ page.title }}
   </h1>
   <div>
-    <time class="text-base text-gray-300" datetime='{{ page.date|date: \"%F\"}}'>{{ page.date | date: "%b·%d·%Y" }}</time>
+    <time class="text-base text-gray-300 dark:text-gray-400" datetime='{{ page.date|date: \"%F\"}}'>{{ page.date | date: "%b·%d·%Y" }}</time>
   </div>
 </div>
-<article class="prose max-w-none prose-p:text-gray-400 prose-headings:text-gray-500">
+<article class="prose max-w-none prose-p:text-gray-400 prose-headings:text-gray-500 dark:prose-headings:text-gray-300 dark:prose-a:text-gray-300">
   {{ content }}
 </article>
 {% include share.html %}
