fix hover state

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,10 +54,9 @@
     </div>
     <button
       id="theme-toggle"
-      class="inline-flex items-center justify-center rounded-md p-2 text-brand-500 transition hover:text-gray-500"
+      class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 transition hover:text-brand-500"
       type="button"
-      aria-label="Toggle dark mode"
-    >
+      aria-label="Toggle dark mode">
       <i class="ti ti-moon text-xl dark:hidden"></i>
       <i class="ti ti-sun text-xl hidden dark:inline"></i>
     </button>
